additions to results

--- a/doc/thesis/results.tex
+++ b/doc/thesis/results.tex
@@ -671,5 +671,53 @@ For Simulated Data, Full Volume:
          whereas the worst levels could go higher than 100 (not shown).}
 \end{figure}
 
+\begin{figure}
+\label{fig:hm_canon_pfilter85}
+\subfigure[]{\label{fig:hm_pfilter85} \includegraphics[scale=.66]{images/pfilter85_hm}}
+\subfigure[]{\label{fig:hm_canon_pfilter85_x} \includegraphics[scale=.85]{images/pfilter_hm85_x}}
+\subfigure[]{\label{fig:hm_canon_pfilter85_y} \includegraphics[scale=.85]{images/pfilter_hm85_y}}
+\subfigure[]{\label{fig:hm_canon_pfilter85_z} \includegraphics[scale=.85]{images/pfilter_hm85_z}}
+\subfigure{\label{fig:scale_pfilter85} \includegraphics[scale=.3]{images/scale3}}
+\caption{Sagittal, coronal and axial slices of SPM results (\autoref{fig:hm_canon_pfilter_x} \autoref{fig:hm_canon_pfilter_y} 
+         \autoref{fig:hm_canon_pfilter_x}), as well as a series of axial slices, \autoref{fig:hm_pfilter}. 
+         Units of match is normalized $\sqrt{MSE}$. The lowest (best) levels were $.7$,
+         whereas the worst levels could go higher than 100 (not shown).}
+\end{figure}
+
+\begin{figure}
+\label{fig:comp1}
+\subfigure[Particle Filter]{\label{fig:comp1pfilter} \includegraphics[trim=5cm 1cm 4cm 1cm,width=15cm]{images/1_pfilter_37_14_7}}\\
+\subfigure[SPM]{\label{fig:comp1spm} \includegraphics[trim=5cm 1cm 4cm 1cm,width=15cm]{images/1_spm_37_14_7}}
+\caption{}
+\end{figure}
+
+\begin{figure}
+\label{fig:comp2}
+\subfigure[Particle Filter]{\label{fig:comp2pfilter} \includegraphics[trim=5cm 1cm 4cm 1cm,width=15cm]{images/2_pfilter_34_12_7}}\\
+\subfigure[SPM]{\label{fig:comp2spm} \includegraphics[trim=5cm 1cm 4cm 1cm,width=15cm]{images/2_spm_34_12_7}}
+\caption{}
+\end{figure}
+
+\begin{figure}
+\label{fig:comp3}
+\subfigure[Particle Filter]{\label{fig:comp3pfilter} \includegraphics[trim=5cm 1cm 4cm 1cm,width=15cm]{images/3_pfilter_23_21_7}}\\
+\subfigure[SPM]{\label{fig:comp3spm} \includegraphics[trim=5cm 1cm 4cm 1cm,width=15cm]{images/3_spm_23_21_7}}
+\caption{}
+\end{figure}
+
+\begin{figure}
+\label{fig:comp4}
+\subfigure[Particle Filter]{\label{fig:comp4pfilter} \includegraphics[trim=5cm 1cm 4cm 1cm,width=15cm]{images/4_pfilter_26_15_7}}\\
+\subfigure[SPM]{\label{fig:comp4spm} \includegraphics[trim=5cm 1cm 4cm 1cm,width=15cm]{images/4_spm_26_15_7}}
+\caption{}
+\end{figure}
+
+\begin{figure}
+\label{fig:comp5}
+\subfigure[Particle Filter]{\label{fig:comp5pfilter} \includegraphics[trim=5cm 1cm 4cm 1cm,width=15cm]{images/5_pfilter_25_34_25}}\\
+\subfigure[SPM]{\label{fig:comp5spm} \includegraphics[trim=5cm 1cm 4cm 1cm,width=15cm]{images/5_spm_25_34_25}}
+\caption{}
+\end{figure}
+
 image comparing epsilon-map with GLM activation map
 
