more in the results

--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -36,7 +36,7 @@
 \numberwithin{algorithm}{chapter}
 \usepackage{algorithmic}
 
-\doublespacing
+%\doublespacing
 
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\Q}{\mathbb{Q}}
