split up results

--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -156,6 +156,7 @@ Abstract Abstract Abstract ...
 \include{particlefilters}
 \include{methods}
 \include{results}
+\include{resultsB}
 \include{conclusion}
 
 \bibliographystyle{ieeetr}
